Small LOC fixes
LOC fixes for Mexico and Santa Fe

--- a/localisation/english/PB_Mexico_l_english.yml
+++ b/localisation/english/PB_Mexico_l_english.yml
@@ -514,9 +514,9 @@
   mexico.13.d:0 "Police arrests are ramping up throughout the whole country these last few months. Mostly having to do with the illegal sale or production of beer and alcoholic drinks. It mostly seemed harmless till a certain point, which is when the police arrested a well known and wanted bandit leader. He was captured, alongside some workers, in what was assumed to be an abandoned mine producing illegal beer.\nAfter his capture the police began to wonder whether any of the other big bandit gangs in Mexico might be involved in this whole alcohol crisis. Their suspicions were confirmed when the arrests started piling up again, which again included various members of various bandit gangs. With this revelation, the government has become rather worried about the safety of the citizens and the stability of the nation. They’re unsure of what their next plan of action should be."
   mexico.13.a:0 "Things Are Heating Up!"
 
-  mexico.14.t:0 "Government Rumours"
-  mexico.14.d:0 "Many rumours have been going around between government officials about the Acto De Cerveza. Some have been about whether it was even a good idea, some about the recent bandit activity surrounding the law, but most are speaking of a possible reform or abolition of the law. But sadly nothing has been confirmed and protests are still ongoing in the streets of multiple Mexican cities. What will be done?"
-  mexico.14.a:0 "What Will Happen Next?"
+ # mexico.14.t:0 "Government Rumours"
+ # mexico.14.d:0 "Many rumours have been going around between government officials about the Acto De Cerveza. Some have been about whether it was even a good idea, some about the recent bandit activity surrounding the law, but most are speaking of a possible reform or abolition of the law. But sadly nothing has been confirmed and protests are still ongoing in the streets of multiple Mexican cities. What will be done?"
+ # mexico.14.a:0 "What Will Happen Next?"
 
   mexico.15.t:0 "Acto De Cerveza Reforms"
   mexico.15.d:0 "The decision is final. The Acto De Cerveza shall be reformed, not abolished, reformed. And it seems it will be done in a way to make most people happy. The changes are clear. The sale of alcoholic drinks is technically still illegal, but can now be bought in government owned stores. The beer production companies are allowed to produce it again if they get a deal with the government. Prices will also be set by the government on a national level. There is also good news for the cafe and pub owners, they can sell alcohol with the permission of the local government alcohol store, which will be where they get their alcohol for a lower price, after which they can sell it again for the national price. They are also only allowed to sell it from 19:00 in the evening to 3:00 in the night.\nBasically everyone is happy with this change, because it ensures that people can still drink their favourite beer, reduce bandit activity and still cut down on alcohol use and abuse. A real step in the right direction many have said."
@@ -555,9 +555,9 @@
   mexico.23.d:0 "After the arrests of Oscar Marato, Victor Marato and their lawyer Antonio Zaragoza in Veracruz not too long ago, the police launched an official investigation into why they were present at the deal. The question has already finished up, and the convicts are willing to give up some information about the head of the Marato bandit gang. They are also willing to give the location of the headquarters of the bandits for a shorter prison sentence. The government accepted the deal and had started an operation. The operation took place last night, with big success. The head of the bandit gang, Sergi Marato and other influential members have been arrested and put into jail. The bandit gang was mostly situated throughout the state of Sonora and had bribed many policemen to keep it a secret. This arrest has to be one of the biggest hits to the Mexican and Colombian bandits."
   mexico.23.a:0 "One Down, Many To Go!"
 
-  mexico.24.t:0 "Bandits Issue Mostly Resolved"
-  mexico.24.d:0 "WIP"
-  mexico.24.a:0 "What A Speech!"
+  #mexico.24.t:0 "Bandits Issue Mostly Resolved"
+  #mexico.24.d:0 "WIP"
+  #mexico.24.a:0 "What A Speech!"
 
   mexico.25.t:0 "Northern Refugees"
   mexico.25.d:0 "The Wild West is a wild place with conflicts and wars being nothing but regular. Recently however there have been more gunshots and death than usual. Many refugees from Santa Fe, Nevada and others are arriving and seeking refuge."
@@ -571,23 +571,23 @@
   mexico.27.d:0 "Last July, late at night in a bar in Tampico, 3 bodies were found by a lady working in the back of the bar. She discovered the bodies after hearing some kerfuffle coming from the main saloon hall. She sadly wasn’t able to see the criminal, nor his getaway. In the bar when she entered was also another man, who said he was robbing the register. They quickly called the cops who arrived to question them.\n\ After some talking with the cops, it was decided to launch an official investigation into the case. However while they were talking, one of the men who was shot made some noise, and it turned out one of them hadn’t died. He was rushed to the hospital, and being able to barely see was asked to point to someone who vaguely looked like the culprit.\n\ Meanwhile on the other side of town, Damián Rouco had just arrived to fight in a boxing match against Jose Manuell Sallent. Damián Rouco is a black boxer who lives in San Luis Potosí and is close to getting a spot in the national boxing championship.\n\ A few days later when the case was made more public, a man stepped forward with some info, Victor Balderas. He claimed to have seen the culprits drive away from the bar with San Luis Potosí licence plates. And thus the police investigated the whole town for people from that region, and found Damián Rouco’s car.\n\ Damián Rouco matched the description given by the wounded man, Victor Balderas and several other witnesses who came forward. Although Damián was at the time of the crime with some friends in a restaurant, no one from the restaurant has confirmed this and the police believes those friends were most likely fellow culprits. Thus Damián was arrested, with his friends nowhere to be seen. Seeing as the evidence wasn’t fully solid, he was put on a trial. And after a very tense trial, in which his race and boxing skills were brought in as evidence against him, he was sentenced to death for a double homicide. Whether it was a fair trial is still and will always be up for debate."
   mexico.27.a:0 "Seems Fair, Right?"
 
-  mexico.28.t:0 "Oil Struck In Chihuahua"
-  mexico.28.d:0 "WIP"
-  mexico.28.a:0 "True Black Gold!"
+  #mexico.28.t:0 "Oil Struck In Chihuahua"
+  #mexico.28.d:0 "WIP"
+  #mexico.28.a:0 "True Black Gold!"
 
-  mexico.29.t:0 "German Trade Deal"
-  mexico.29.d:0 "WIP"
-  mexico.29.a:0 "What A Deal!"
+  #mexico.29.t:0 "German Trade Deal"
+  #mexico.29.d:0 "WIP"
+  #mexico.29.a:0 "What A Deal!"
 
-  mexico.30.t:0 "Christmas Day Massacre"
-  mexico.30.d:0 "WIP"
-  mexico.30.a:0 "Such Horrors!"
+  #mexico.30.t:0 "Christmas Day Massacre"
+  #mexico.30.d:0 "WIP"
+  #mexico.30.a:0 "Such Horrors!"
 
   #1936
-  mexico.31.t:0 "The January Declaration"
-  mexico.31.d:0 "WIP"
-  mexico.31.a:0 "How Will This End?"
+  #mexico.31.t:0 "The January Declaration"
+  #mexico.31.d:0 "WIP"
+  #mexico.31.a:0 "How Will This End?"
 
-  mexico.32.t:0 "Massacre Investigation"
-  mexico.32.d:0 "WIP"
-  mexico.32.a:0 "This Is Outrageous!"
+  #mexico.32.t:0 "Massacre Investigation"
+  #mexico.32.d:0 "WIP"
+  #mexico.32.a:0 "This Is Outrageous!"
