--- a/localisation/english/PB_Mexico_l_english.yml
+++ b/localisation/english/PB_Mexico_l_english.yml
@@ -427,16 +427,13 @@
   PB_MEX_Small_Scale_Naval_Developments_desc:0 "The Mexican navy will always remain an afterthought, so why bother expending government money for a sector of the military that would never be able to play catch up with the rest of the world? Instead, we should focus the naval budget on developing smaller naval craft for the defence of our nation’s shores."
 
   PB_MEX_Our_Finest_Hour:0 "Our Finest Hour"
-  PB_MEX_Our_Finest_Hour_desc:0 ""
+  PB_MEX_Our_Finest_Hour_desc:0 "Mexico now stands at a crossroad, does it reclaim its former glory as the major power on the North American continent, or does it bend to the might of others? Many believe that now is the time that we retake what is rightfully ours, no more compromises, no more treaties, Mexico shall be whole."
 
   PB_MEX_Mobolize_The_Reserves:0 "Mobolize The Reserves"
-  PB_MEX_Mobolize_The_Reserves_desc:0 ""
-
-  PB_MEX_Mobolize_The_Reserves:0 "Mobolize The Reserves"
-  PB_MEX_Mobolize_The_Reserves_desc:0 ""
+  PB_MEX_Mobolize_The_Reserves_desc:0 "There are still some men who have not been mobilized for the upcoming war effort. It would serve the state greatly if these remaining souls were armed and ready for the greatest war Mexico shall ever partake in. Afterall we are going to need as many soldiers we can get our hands on if we are to break the tide of democratic-Jacobinism. "
 
   PB_MEX_Operation_Screeming_South:0 "Operation: Screaming South"
-  PB_MEX_Operation_Screeming_South_desc:0 ""
+  PB_MEX_Operation_Screeming_South_desc:0 "The terrain of Yucatan and Guatemala possess the most difficult terrain of all our possible fronts. Their hostile jungles will no doubt slow down the advancement of our troops and it is this very reason that we must dedicate our full might towards this theatre."
 
   PB_MEX_Northern_Consolidation:0 "Northern Consolidation"
   PB_MEX_Northern_Consolidation_desc:0 ""
