--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -998,10 +998,10 @@
   SCA_The_New_America_Campaign_desc:0 "Throughout the Reclamation War, due to a combination of the Commonwealth's Scorched Earth retreat and some of our own over-zealous forces, the industry of the former Commonwealth territories is in ruins. Few factories are intact, fewer still are at maximum efficiency. If we are to wield the might that we have earned through blood and steel, we must work at haste to rebuild the damage done. Resources must be redirected toward providing the materials needed to not only fix the industrial set backs, but also to improve the lives of those in the occupied territories. "
 
   SCA_Ministry_Of_The_Exterior:0 "Ministry Of The Exterior"
-  SCA_Ministry_Of_The_Exterior_desc:0 ""
+  SCA_Ministry_Of_The_Exterior_desc:0 "Beyond our borders we are surrounded by enemies who would jump at the opportunity to strangle our revolution in the crib, and are worryingly well-armed enough to do it. We cannot allow this to occur.\n\nWith the formation of the Ministry of the Exterior these foreign threats will be neutralised without the need of invasion. Our agents will work to destabilise these hostile nations through the promotion of revolutionary class politics and the sabotage of their critical infrastructure, ensuring that they will be too internally focused to launch an attack on us. If we are lucky we could even gain some allies to our revolution. "
 
   SCA_Ministry_Of_The_Interior:0 "Ministry Of The Interior"
-  SCA_Ministry_Of_The_Interior_desc:0 ""
+  SCA_Ministry_Of_The_Interior_desc:0 "Our revolution has come far and achieved much, but yet there are still those within our nation hellbent on tearing it all down. These anti-social elements hide often in plain sight, masquerading as loyal citizens while promoting dissent through the guises of “criticism”, “difference of opinion” or even “freedom of speech”.\n\nTo preserve ideological purity in all sections of society, the Ministry of the Interior will be given wide-ranging jurisdiction over other sectors of government and the command of the secret police for information gathering assignments. Informants will be placed in every layer of bureaucracy to maintain strict ideological discipline and sniff out any anti-revolutionary plots that begin to brew. No one is free from scrutiny, not even the party itself."
 
   SCA_Exporting_Americas_Army:0 "Exporting America's Army"
   SCA_Exporting_Americas_Army_desc:0 ""
@@ -1031,7 +1031,7 @@
   SCA_Dedication_To_Liberation_desc:0 "What is the movement without its cause? A body without a soul, that's what! It becomes like the lifeless blood-sucking capitalist system that we have strived to excise from our God-blessed lands. Thus, we must rally the American collective to OUR cause; the Jacobin cause!"
 
   SCA_The_Filth_Of_The_Earth:0 "The Filth Of The Earth"
-  SCA_The_Filth_Of_The_Earth_desc:0 ""
+  SCA_The_Filth_Of_The_Earth_desc:0 "We are no strangers to the horrors of war, not in the slightest. The veterans of our ranks remember those days in Asturias: those horrific machines straight from hell, spitting fire and shaking the earth like a dragon, then the live-wire that strangled men like serpents and the gas that burnt them inside out. Despite all these modern horrors man’s lust for war could not be sated. The capitalists of the world do not care to see how our we suffered. They never saw the tears of widows, the crippled heroes who starved on the streets, nor the ghostly landscapes made barren by war. No! They live lavishly in their ivory towers, stacking their blood money high while us, the common people, bleed for them in their pointless wars. But no longer. They will know the fear that we once knew on those battlefields. With the acquisition of our own A-bomb not only will the revolution be secure from any invasion, but the filthy hives of the capitalists will be in our crosshairs- and they will be no safer than anyone else."
 
   SCA_Seven_Oceans_Navy:0 "Seven Oceans Navy"
   SCA_Seven_Oceans_Navy_desc:0 ""
@@ -1091,7 +1091,7 @@
   SCA_Fight_Against_Futurism_desc:0 "Automated labour; a bittersweet opportunity. While it is undeniable that automation can vastly outproduce human workers in terms of efficiency and hours of work, we cannot grow ourselves on a system that blatantly disregards the hundreds of thousands of workers who need to provide not only for themselves but their families too. Having witnessed first-hand the devastating effects on the common labourer caused by the employment shortages of the infernal machine, we have no right to repeat this mistake; a careful approach must be taken in regards to automation, moderating its usage and guaranteeing the jobs of our invaluable workforce. "
 
   SCA_The_Capital_Question:0 "The Capital Question"
-  SCA_The_Capital_Question_desc:0 "Now that our rule has been cemented it is time to decide what our permanent capital will be. The symbolism of our choice will important, so we have whittled the candidates down to four major cities:\n\nNew York is an obvious choice to many, being our largest and most modern city it represents our dedication to a prosperous future- but the stain of capitalism will be hard to remove from the historically decadent city.\n\nThe next candidate is Boston, a very symbolic choice for it was where the first American Revolution began. For the party faithful there is no city more suitable to house our revolution. However, some of our comrades have also suggested the original home of our revolution be the capital: Libertyville. Although more isolated from the urban centres of the east, its loyalty to the our cause is unquestionable and deserves recognition.\n\nFinally, a contingent of supporters have formed around Chicago being our capital. Like New York, it is a modern city of immense prestige and technological marvel, and its central location makes it perfect to project our influence over our nation. But it is not without controversy: being under Quebecois rule for so long has created a culture unlike our own, which may be more difficult to accommodate.\n\nAs always, the choice is yours to make. "
+  SCA_The_Capital_Question_desc:0 "Now that our rule has been cemented it is time to decide what our permanent capital will be. The symbolism of our choice will important, so we have whittled the candidates down to four major cities:\n\nNew York is an obvious choice to many, being our largest and most modern city it represents our dedication to a prosperous future- but the stain of capitalism will be hard to remove from the historically decadent city.\n\nThe next candidate is Boston, a very symbolic choice for it was where the first American Revolution began. For the party faithful there is no city more suitable to house our revolution. However, some of our comrades have also suggested the original home of our revolution be the capital: Libertyville. Although more isolated from the urban centres of the east, its loyalty to the our cause is unquestionable and deserves recognition.\n\nFinally, a contingent of supporters have formed around Melbourne being our capital. Like New York, it is a modern city of immense prestige and technological marvel, and its central location makes it perfect to project our influence over our nation..\n\nAs always, the choice is yours to make. "
 
   ##########################
   # TOOLTIPS/FLAGS/COSMETIC/TRAITS/PARTIES
@@ -1356,7 +1356,7 @@
   SCA11opta:0 "What!"
 
   SCA12title:0 "Defection in our ranks!"
-  SCA12desc:0 "" 
+  SCA12desc:0 "INCIDENT REPORT: 516/n/nAs our conflict with the SCA drags on, it is inevitable that a level of unrest would grow within our own borders. initially this was limited to pacifistic political factions and religious conscientious objectors, but as time went on, these voices grew. Seditious elements within our cities have begun to take action to hamper the war effort and force us to go into peace. And these elements has now begun to appear within our own military, as anti-Commonwealth insurgents began to encourage defection within our ranks. And just a few days ago, this has reached our command. As two of our generals, presumably having made contact with the SCA, have deserted their post. Frontline units claim to have seen them making a break for the SCA's defences. As far as we can tell, this effort was successful./nFollowing this incident, it is recommended that security and ideological screening of our command staff be increased." 
   SCA12opta:0 "What!"
 
   SCA13title:0 "The Americans Request to Buy Alaska"  ## Doesn't need loc
@@ -1386,14 +1386,14 @@
   SCA18opta:0 "Workers of the world unite!"
 
   SCA19title:0 "A Dismissive Letter From Tokyo"
-  SCA19desc:0 "" 
+  SCA19desc:0 "How it happened, nobody is sure. Hopes were running high that the proposed alliance would come to fruition and the two leading revolutionary states united… but it was not meant to be.\n\nThe Japanese delegation have rebuffed our advances and begun closing themselves, and Asia, off from us. The dream of a united revolution has been snuffed out." 
   SCA19opta:0 "WHAT!"
 
   SCA20title:0 "The Capital Question"
-  SCA20desc:0 "" 
+  SCA20desc:0 "With the Commonwealth defeated and the Eastern Seaboard liberated, we must continue our efforts at consolidation and building our legitimacy as a nation. And a good step on this path is selecting a new permanent capital. There are three options available to us./nThe first is New York, with its vital ports and access to the sea, it is a major trade hub. Setting up our capital here would place our seat of government in the very heart of our supply chain. Allowing goods to more easily reach us to be distributed./nOur second option is Boston, though not quite as large a trade up as New York, this city does serve as the cultural and ceremonial heart of our nation. This was one of the sites of our forefathers initial efforts to break away from the British. It is integral to our history and identity. Selecting this as our capital would be seen as us honouring our predecessors and celebrating the success of their dream./nAnd finally is Melbourne. The city serves as a major seat of Industry, surrounded by factories and the people who work within them. If chosen as our capital, we will sit as our nation's industrial heart and show our commitment to the liberation of the workers. " 
   SCA20opta:0 "New York"
   SCA20optb:0 "Boston"
-  SCA20optc:0 "Chicagou"
+  SCA20optc:0 "Melbourne"
 
   SCA21title:0 "The American Cromwell"
   SCA21desc:0 "" 
@@ -1543,8 +1543,8 @@
   SCA53opta:0 "We've come this far."
 
   SCA54title:0 "Red Utopia"
-  SCA54desc:0 "" 
-  SCA54opta:0 ""
+  SCA54desc:0 "Sounds of battle fall silent over the horizon as the last stubborn holdouts of reactionaries are finally pacified, ending the last of our revolution’s immediate threats. Already the attitude among our comrades is greatly improved; the despair of the old, uncertain days of the Great March West fades away to be replaced with an atmosphere of hope. Hope for our revolution. Faith in our leader. Confidence in our victory. Among the recently liberated towns, grand artworks and revolutionary declarations pattern the walls of every standing building, replacing whatever dreary murals that may have existed before. The people, although still timid around us, seem to accept our rule over them. Some even hand us gifts of food and flowers as we pass by. With liberation being so recent the old regimes’ henchmen may still lurk in the shadows, plotting behind our backs and waiting to draw their daggers out. If we are to be more than a footnote in history, we have much yet to do. Lists must be compiled, enemies trampled, and society remoulded in our image." 
+  SCA54opta:0 "Utopia is in sight, we only need to seize it."
 
   SCA55title:0 "Cult of Butler"
   SCA55desc:0 "Feeble fool, these were the words said by Philadelphia as Butler and his compatriots stepped forth into lands unknown. Almost half a million Americans from across the Commonwealth had given their lives to build a new, fair, and free nation, one not plagued by British absolutism, and one not under threat by dogmatic capitalist systems. This was the promise Butler made, and one he intends to deliver, no matter the cost. It was for this reason that Butler had proclaimed to a crowd of thousands out the front of Libertyville town hall that all war time powers were at this very moment “to remain in place for the forceable future”." 
