--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -4,6 +4,12 @@
   SCA_Country_Desc_Topbar:0 "§YFeatures:§!\n    - Form the United States\n    - Conquer your way to the East Coast \n    - Manage the SCA's precarious situation\n    - Avenge the Failed Revolution\n    - Spread the Revolutionary cause globally\n\n§YSituation:§!\nThe Second Continental Army is a failed state, filled with the dreams and hopes of thousands. Most of the population consists of hardened Great War veterans and young determined souls wishing to bring about the collapse of the Anglo-American capitalist economic system that had failed them and their families. These soldiers of the revolution have marched as far as Halifax all the way to the Oregon Coast in search for better opportunities, under the leadership of the prestigious American general Smedley Butler. Butler was the de facto leader of the Bonus Brigade, made up of impoverished Great War veterans that felt betrayed by their governments lack of financial and social support. The Bonus Brigade Crisis as it would be come to be known as would see Butler attempt a revolution in Philadelphia with the support of thousands of veterans and general military personal. However, this revolution wouldn’t last long and soon enough Butler and his supporters would find themselves marching through the last bastion of uncolonized America in a bid to escape the United Commonwealth military, finally setting up shop on the Oregon Coast.\n\nThe §YThe Second Continental Army§! is a §RFailed State§!\n\n§YSpecial thanks to§!:\nBernie, Stallone, Lofn, Two-Watt, Wolfxe, Nilo, Mimi, Globus, Alfred/Fausi, BoringIndividual, Jubs, Tapir, Weis, Erwin, Jackie, Beezlebub, Zerogamer, SilentKing, Soble, Red, and Arj.\n\n"
 
   ##########################
+  # TECH
+  ##########################
+
+  improved_inf_SCA:0 "Survival of the fittest"
+
+  ##########################
   # LEADERS
   ##########################
 
@@ -1096,6 +1102,8 @@
   ##########################
   # TOOLTIPS/FLAGS/COSMETIC/TRAITS/PARTIES
   ##########################
+
+  SCA_The_Physical_Standards_Act_tt:0 "£GFX_nato_unit_motorized_icon_small All Infantry & Mot/Mech:\nSoft attack: §G+2.5%§!\nDefense: §G+2.5%§!"
  
   SCA1tooltip:0 "§YYou will tag switch to the SCA§!"
 
