SCA focus loc is done

--- a/localisation/english/PB_SCA_l_english.yml
+++ b/localisation/english/PB_SCA_l_english.yml
@@ -1015,7 +1015,7 @@
   SCA_Council_For_Mutual_Economic_Assistance_desc:0 "While the capitalist nations will preach that purchasing power serves only to benefit the fat-cat elites, we have come to rightfully embrace its morally superior uses. Our strengthening economy should be dedicated towards empowering other like-minded allies endeavouring in their share of the global struggle against imperialism. To be able to effectively achieve this ambition, we will establish the Council for Mutual Economic Assistance, a financial bureau that we may employ to direct the economy for the good of the collective."
 
   SCA_The_Tonkaliwako_Accord:0 "The Tonkaliwako Accord"
-  SCA_The_Tonkaliwako_Accord_desc:0 ""
+  SCA_The_Tonkaliwako_Accord_desc:0 "The Confederacy of Free Tribes remains in a peculiar position, surrounded by all sides by what they believe to be hostile Jacobin nations. However, we have no intention of stripping the Indians of their well-deserved independence and we shall make this very clear to those in Tonkaliwako."
 
   SCA_Approach_Copenhagen:0 "The Greenland Purchase"
   SCA_Approach_Copenhagen_desc:0 "Though largely devoid of natural resources and its population being mostly Danish, ownership of Greenland would coffer certain benefits. Namely its strategic position in the Atlantic ocean would allow our fleets to better patrol and secure those waters. However, given the distance between it and our own borders, along with the harshness of Greenland itself and possible international backlash, an invasion is out of the question. Instead we must seek to purchase the island from Denmark. If they agree, we will gain the island. If they refuse then we will have to suck it up and move on with our lives."
@@ -1036,46 +1036,46 @@
   SCA_Proclaim_The_United_States_Of_America_desc:0 "Friends, comrades, we have finally done it! We started as a small insurgency, forced to flee our homeland with the stink of defeat. Our march east cost us many lives, but we survived. And from this small core of survivors, we became a fully fledged nation. One that fought our former colonial masters and won, freeing America from the shackles of Imperialism. Today is the day we move on from an interim government, to a functional and permanent one. Today the world will know of the United States of America!"
 
   SCA_The_American_Cultural_Revolution:0 "The American Cultural Revolution"
-  SCA_The_American_Cultural_Revolution_desc:0 ""
+  SCA_The_American_Cultural_Revolution_desc:0 "Americans have remained divided after a long history of imperial meddling in North America, some even consider themselves separate or outright independent from the American cultural hub of Philadelphia. This capitalist vice of culture that seeks to separate us ends this very moment, Americans everywhere must know that they bleed the same blood and speak the same tongue."
 
   SCA_Establish_The_Anti_War_League:0 "Establish The Anti-War League"
-  SCA_Establish_The_Anti_War_League_desc:0 ""
+  SCA_Establish_The_Anti_War_League_desc:0 "No one knows the cost of war more than Butler. Once a toy for the rich and powerful Butler has seen men, sons, and brothers lose life and limb over in the name of capitalism. How many generations, heroes, and future presidents haven’t had the opportunity to blossom in our state because of war, millions, if not billions. "
 
   SCA_Intensify_Anglo_Rivarly:0 "Intensify Anglo Rivarly"
-  SCA_Intensify_Anglo_Rivarly_desc:0 ""
+  SCA_Intensify_Anglo_Rivarly_desc:0 "The British Empire is a threat to not only our great nation but the revolutionary cause globally, it is because of this fact that we must, temporarily, support the Pacte Revanchiste even if it goes against our national morals. After all no one likes working with Neo-Imperialists but as they say, the enemy of my enemy is my friend."
 
   SCA_Emphasize_The_American_Plight:0 "Emphasize The American Plight"
-  Emphasize_The_American_Plight_desc:0 ""
+  SCA_Emphasize_The_American_Plight_desc:0 "We have no quarrel with the Indians, in fact we lament their history of struggle, but at the end of the day we set out to unite North America under the Jacobin cause no matter the cost. At the end of the day its just inevitable that our states will clash so let us end the facade."
 
   SCA_The_Thorn_In_Our_Side:0 "The Thorn In Our Side"
-  SCA_The_Thorn_In_Our_Side_desc:0 ""
+  SCA_The_Thorn_In_Our_Side_desc:0 "Mexico and its breakaways have always been a thorn in our side, their continuous state of hostile affairs with one another, and occasionally ourselves has remained a headache for us to deal with. This will no longer be the case as our military prepares for one of the last great offensives our nation will see for a long time."
 
   SCA_The_Northern_Campaign:0 "The Northern Campaign"
-  SCA_The_Northern_Campaign_desc:0 ""
+  SCA_The_Northern_Campaign_desc:0 "With the British Empire reduced to a mere rump state and its dominions in a state of panic the time has come to seize the moment and liberate our fellow workers in the North."
 
   SCA_The_Butler_Manifesto:0 "The Butler Manifesto"
-  SCA_The_Butler_Manifesto_desc:0 ""
+  SCA_The_Butler_Manifesto_desc:0 "Jacobin ideology has always been a mishmash of ideas and theories, while there are always some consistent rules that are followed there is a severe lack of political philosophy when it comes to the wider world of leftist ideology. But this changes today, Butler, the esteemed writer that he is, has produced a political text worthy of the highest praises. Known most fittingly as the Butler Manifesto, this book recounts the struggles of the SCA whilst uniting Jacobinism under one political motive. Whilst some Jacobins in the wider globe remain critical of the text most Americans praise it for the great piece of literary work that it is. "
 
   SCA_Proclaim_The_North_American_Union:0 "Proclaim The Greater North American Union"
-  SCA_Proclaim_The_North_American_Union_desc:0 ""
+  SCA_Proclaim_The_North_American_Union_desc:0 "Who has united us under one banner, I say Butler! Who has given us a future to be proud of, I say Butler! Who has brought the revolution west, I say Butler. All heil Butler and the glorious Greater North American Union, shall the motherland live to eternity and beyond. "
 
   SCA_The_Alaska_Purchase:0 "The Alaska Purchase"
-  SCA_The_Alaska_Purchase_desc:0 ""
+  SCA_The_Alaska_Purchase_desc:0 "Alaska is a desolate wilderness filled with nothing but snow and ice. Yet it holds one great interest to our states mission; it is subject to the interests of Russian colonial imperialism, and it has always been our goal to rid this continent of European powers. While we are on good terms with the Russians, they are still a threat to both our nation and ideology and it is for this reason that we must gain such lands, even if they are utterly worthless."
 
   SCA_Appeal_To_The_Caribbean_Republics:0 "Crush The Caribbean Republics"
   SCA_Appeal_To_The_Caribbean_Republics_desc:0 ""
 
   SCA_The_London_Bomber_Program:0 "The London Bomber Program"
-  SCA_The_London_Bomber_Program_desc:0 ""
+  SCA_The_London_Bomber_Program_desc:0 "The Department of Aeronautics has put forward a design of a heavy bomber that could theoretically reach London and deliver a payload of immense destruction. The specifics are still being worked on, but the idea is technically feasible. Butler has already approved of the project so its more of a question of when not if. "
 
   SCA_A_Pragmatic_Alliance:0 "A Pragmatic Alliance"
-  SCA_A_Pragmatic_Alliance_desc:0 ""
+  SCA_A_Pragmatic_Alliance_desc:0 "Japan is our natural Jacobin ally, they were one of the first nations to birth this ideology into the world and it is only natural that we extend an offer of mutually beneficial friendship as a thanks. The time will eventually come when the Earth’s workers will have to fight against the last hold outs of capitalism and there is no greater ally we could have than Japan."
 
   SCA_Workers_Of_The_World:0 "Workers of The World"
-  SCA_Workers_Of_The_World_desc:0 ""
+  SCA_Workers_Of_The_World_desc:0 "If we are to be seen as the bastion of the Jacobin world then we must reach out and kickstart a series of diplomatic efforts between other Jacobin nations across the globe. Day by day we shall forge new geo-political ties and foster rich friendships so that when the day comes, we will have someone watching our back."
 
   SCA_Operation_Burning_South:0 "Operation: Burning South"
-  SCA_Operation_Burning_South_desc:0 ""
+  SCA_Operation_Burning_South_desc:0 "With the British Empire reduced to a mere rump state and its dominions in a state of panic the time has come to seize the moment and liberate our fellow workers in the Caribbean."
 
   SCA_Crush_The_Maritime_Seperatists:0 "Crush The Maritime Seperatists"
   SCA_Crush_The_Maritime_Seperatists_desc:0 "In the sleepy lands of the Maritimes, it is easy for appearances to imply satisfaction with the new government. Protests are limited, the people are quiet… but appearances can be deceiving.\n\nHidden among the woods and hills lie encampments of rebel militias, awaiting the opportunity to overturn our revolution and return the region to the hands of the perfidious British. It is imperative that we destroy this movement before it can grow out of hand; their camps will be flushed out with bombs, while snipers pick off those who escape. We will show these men no mercy."
