Wild West stuff near completion

--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -918,6 +918,18 @@
   PBNews.232.d:0 "Today marks the end of the deadliest conflict to ever have arisen on the North American continent. Philadelphia stated to the world that although it had defeated its most fearsome enemy yet, there was still much to be done with other, more global, affairs. The whereabouts of Butler are unknown but reports indicate that every effort is being made to find the man that nearly brought North America to its knees. Many are now waiting to find out what Philadelphia's plans are if they do manage to catch the so-called red bastard."
   PBNews.232.a:0 "A sigh of relief for America no doubt."
 
+  PBNews.233.t:0 "THE COMMONWEALTH OF DESERET"
+  PBNews.233.d:0 "Val A. Browning and his cabinet members had confirmed that reports of a New Zion led unification of America was indeed correct, stating that this new state was to be hence forth known as the Commonwealth of Deseret. Few specifics on the administration of the large political entity are yet known to the wider world and seemingly many administrators within the Commonwealth itself. Many critics point out that the country will soon regress into a state of chaos and eventually total collapse as the only uniting factor that Browning’s government has with their newly conquered populations is geography. It seems rebellion is all but guaranteed.  "
+  PBNews.233.a:0 "Unity through faith."
+
+  PBNews.234.t:0 "THE AMERICAN REPUBLIC"
+  PBNews.234.d:0 "Officially known as the American Citizens Republic, George S. Patton and his band of money hungry mercenaries have done what no state could ever do, unite the entirety of the Wild West under one freedom loving government. What the future holds for Patton and his cabal is yet known but apparently political reforms are already under way to change the once mercenary led nation in a proper functioning bureaucracy. Whilst the promises of democratic reform and Patton’s retirement have soothed some minds many question just how far Patton really is willing to go with his dreams of an American Republic. "
+  PBNews.234.a:0 "You're telling me a band of Mercenaries did this?"
+
+  PBNews.235.t:0 "THE REPUBLIC OF ROCKEFELLIA"
+  PBNews.235.d:0 "The Free Republic of Rockefellia has proclaimed total corporate hegemony over the Wild West today in a grand televised speech. Conrad Rockefeller and his closest corporate managers have stated that this new government would take a hands off approach when it came to the governing of the newly formed nation. While many within Rockefellia are happy to hear such news some have wisely stated the fact that nation will struggle to integrate and foster a Rockefellian culture if too much autonomy is given away."
+  PBNews.235.a:0 "The free market proves its worth."
+
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
   stockcrisis.1.a:0 "Oh dear"
