--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -196,7 +196,7 @@ PB_Culture_Guyanese_tt:0 "Guyanese"
 PB_Culture_Mapuche_tt:0 "Mapuche"
 PB_Culture_Paraguayan_tt:0 "Paraguayan"
 PB_Culture_Peruvian_tt:0 "Peruvian"
-PB_Culture_Quechua_tt:0 "Quecha"
+PB_Culture_Quechua_tt:0 "Quechua"
 PB_Culture_Riograndese_tt:0 "Riograndese"
 PB_Culture_Venezuelan_tt:0 "Venezuelan"
 PB_Culture_Suriname_tt:0 "Surinamese"
