--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -930,6 +930,10 @@
   PBNews.235.d:0 "The Free Republic of Rockefellia has proclaimed total corporate hegemony over the Wild West today in a grand televised speech. Conrad Rockefeller and his closest corporate managers have stated that this new government would take a hands off approach when it came to the governing of the newly formed nation. While many within Rockefellia are happy to hear such news some have wisely stated the fact that nation will struggle to integrate and foster a Rockefellian culture if too much autonomy is given away."
   PBNews.235.a:0 "The free market proves its worth."
 
+  PBNews.236.t:0 "CRISIS IN TEJAS"
+  PBNews.236.d:0 "After years of unrest simmering beneath the surface, the Tejano-Americans have made themselves known in explosive fashion. The English speaking minority in Tejas has long pushed against the predominantly Catholic, Spanish speaking majority that dominates the Tejano legislative assembly. Said assembly failed to reach a resolution on the issue of American immigrant voting rights, leaving the situation in limbo and enraging Anglo-American nativists.\n\nClashes between the Tejano army and the Texan militias continue as both sides look to the East, waiting to see how Philadelphia will react."
+  PBNews.236.a:0 "A house divided cannot stand."
+
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
   stockcrisis.1.a:0 "Oh dear"
