--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -2305,6 +2305,31 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   ICA_Republic_cn_ADJ:0 "Irish"
   ICA_Republic_an_ADJ:0 "Irish"
 
+  IRE_Commonwealth_ni:0 "Irish Commonwealth"
+  IRE_Commonwealth_ni_DEF:0 "The Irish Commonwealth"
+  IRE_Commonwealth_ds:0 "Irish Commonwealth"
+  IRE_Commonwealth_ds_DEF:0 "The Irish Commonwealth"
+  IRE_Commonwealth_rc:0 "Irish Commonwealth"
+  IRE_Commonwealth_rc_DEF:0 "The Irish Commonwealth"
+  IRE_Commonwealth_an:0 "Irish Commonwealth"
+  IRE_Commonwealth_an_DEF:0 "The Irish Commonwealth"
+  IRE_Commonwealth_cn:0 "Irish Commonwealth"
+  IRE_Commonwealth_cn_DEF:0 "The Irish Commonwealth"
+  IRE_Commonwealth_lb:0 "Irish Commonwealth"
+  IRE_Commonwealth_lb_DEF:0 "The Irish Commonwealth"
+  IRE_Commonwealth_ss:0 "Irish Commonwealth"
+  IRE_Commonwealth_ss_DEF:0 "The Irish Commonwealth"
+  IRE_Commonwealth_jc:0 "Irish Commonwealth"
+  IRE_Commonwealth_jc_DEF:0 "The Irish Commonwealth"
+  IRE_Commonwealth_ni_ADJ:0 "Irish"
+  IRE_Commonwealth_rc_ADJ:0 "Irish"
+  IRE_Commonwealth_lb_ADJ:0 "Irish"
+  IRE_Commonwealth_ss_ADJ:0 "Irish"
+  IRE_Commonwealth_jc_ADJ:0 "Irish"
+  IRE_Commonwealth_ds_ADJ:0 "Irish"
+  IRE_Commonwealth_cn_ADJ:0 "Irish"
+  IRE_Commonwealth_an_ADJ:0 "Irish"
+
   DRU_Victory_ni:0 "Russian Federal Republic"
   DRU_Victory_ni_DEF:0 "The Russian Federal Republic"
   DRU_Victory_ds:0 "Russian Federal Republic"
