--- a/localisation/english/PB_war_l_english.yml
+++ b/localisation/english/PB_war_l_english.yml
@@ -73,3 +73,6 @@ WAR_NAME_SCA_AME:0 "Second American Revolution"
 WAR_NAME_AME_SCA:0 "Second American Revolution"
 WAR_NAME_SCA_ENG:0 "Second American Revolution"
 WAR_NAME_ENG_SCA:0 "Second American Revolution"
+
+WAR_NAME_KOR_FIN:0 "The 2nd Finno-Korean Hyperwar"
+WAR_NAME_FIN_KOR:0 "The 2nd Finno-Korean Hyperwar"
