--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -954,6 +954,17 @@ AME_Southern_Rebellion:0 "Southern Rebellion"
 AME_Southern_Rebellion_desc:0 "For far too long we have been ignored by the suits in Philadelphia. They openly spit on our faces and insult us whenver they very damn well please but we have had enough of it. No longer will our traditions, morals, and beliefs be hampered on by an administration so folly. So I call you brothers, rise, rise, rise up into Dixie Land!\n\n§RAnd End This Charade Once And For All!§!"
 AME_Civil_Unrest:0 "Civil Unrest"
 AME_Civil_Unrest_desc:0 "It is only time until we see the south proclaim independence but while the clock ticks down we have other pressing matters to attend to. Riots, corruption, and racial tensions are all being birthed in this moment of strife. We must, at the very least, attempt to control the situation else face intervention from our fathers in Britain."
+AME_Increase_Comp_Virginia:0 "Increase Compliance In Virginia"
+AME_Increase_Comp_Albemarle:0 "Increase Compliance In Albemarle"
+AME_Increase_Comp_Claredon:0 "Increase Compliance In Claredon"
+AME_Increase_Comp_Georgia:0 "Increase Compliance In Georgia"
+AME_Increase_Comp_Seminolia:0 "Increase Compliance In Seminolia"
+AME_Increase_Comp_West_Florida:0 "Increase Compliance In West Florida"
+AME_Increase_Comp_Taliaferro:0 "Increase Compliance In Taliaferro"
+AME_Increase_Comp_Bailey:0 "Increase Compliance In Bailey"
+
+# Occupation
+AME_Martial_Law:0 "Commonwealth Martial Law"
 
 # Ideas
 PB_AME_Dixie_Rebellion:0 "The Dixie Uprising"
@@ -966,39 +977,41 @@ Bleeding_South_Enabled:0 "The Bleeding South Is Active"
 # Tooltips
 Bleeding_South1tooltip:0 "God Help Us All"
 Bleeding_South2tooltip:0 "§RAfter 15 days the United Commonwealth might just become a little less civilized§!"
-Bleeding_South3tooltip:0 "§YYou will tag switch to the FSA (Free States Alliance)§!"
+Bleeding_South3tooltip:0 "§YYou will tag switch to the FSA (Free States Alliance)§!\n\n§RThey have no playable content§!"
+PB_AME_Overstep_Our_Boundaries_tt:0 "Applies an improved version of the §HMartial Law§! occupation law"
+PB_AME_Dial_Up_The_Heat_tt:0 "Increasing §HCompliance§! in §gDixie§! states no longer increases §RResistance§!"
 
 # Events
 Bleeding_South1title:0 "Violent Riots"
 Bleeding_South1desc:0 "The officer's pristine blue uniform aided little in the ensuing battle for the city roads, a war undeclared but very much active between the local authorities and white civilain population. Racial slurs rant rampant and armed showdowns occured in approximately five minute intervals. The south at this moment turned into a cesspool of degeneracy as frequent confrontations between other races, mainly between black and white, turned violent. Though as the night quietened so did the riots. But a new day would bring new "festivities"." 
-Bleeding_South1opta:0 "Can Everyone Just Calm Down?"
+Bleeding_South1opta:0 "Can everyone just calm down?"
 
 Bleeding_South2title:0 "Racial Street Brawl"
 Bleeding_South2desc:0 "A lone laundromat located in a predominantly white suburb laid victim to a bloody beating today. Local reports state that a young Africian-American entered the laundromat to do business when a gang of masked individuals, assumed to be stalking the boy, jumped him and draged him into the middle of the road, where they, Quote on quote. "Beat the fucking shit out of him". Said by locals present at the time. Apparently a few minutes later the beating turned into an ugly confrontation between the black and white local populations and a street brawl followed suite.\n\nThe young boy is now dead as a result of the beating." 
-Bleeding_South2opta:0 "Can Everyone Just Calm Down?"
+Bleeding_South2opta:0 "Can everyone just calm down?"
 
 Bleeding_South3title:0 "Talks Of Corruption"
 Bleeding_South3desc:0 "Rumours have spread that local officials are accepting large amounts of money to turn a blind eye in regards to southern mobilization and the raising of state funded militias. We have little power to intervene and doing so would likely on escalate the situation so as it stands the south only gets stronger.\n\nAnd more corrupt. " 
-Bleeding_South3opta:0 "Can Everyone Just Calm Down?"
+Bleeding_South3opta:0 "Can everyone just calm down?"
 
 Bleeding_South4title:0 "Weapons Depot Raided"
 Bleeding_South4desc:0 "A local garrison has just responded to the head of military affairs stating that a raid from a rag-tag militia group has just occured. Overwhelmed the garrison is said to have given up arms with little resistance. In fact it is said a large proportion of soliders defected to the militias cause.\n\nNow they grow stronger in size." 
-Bleeding_South4opta:0 "Can Everyone Just Calm Down?"
+Bleeding_South4opta:0 "Can everyone just calm down?"
 
 Bleeding_South5title:0 "The Dixie Uprising"
 Bleeding_South5desc:0 "The garrison in Savannah stopped responding at 09:00 today. The most recent broadcast from yesterday spoke of rising unrest and the near collapse of the authoritie's hold on the city, stating that unless Northern aid arrives the garrison will likely defect to the SFA (Free States Alliance). The SFA remains the largest political body against northern rule in the south. Lead by southern landowners it is likely the worst has just begun and will only continue from this point on. Our military have already responded by mobilizing in preparation for the inevitable civil war as gunshots can already be heard in most major Southern cities. " 
 Bleeding_South5opta:0 "May The Greatest Americans Win"
-Bleeding_South5optb:0 "I Wish I Was In The Land Of Cotton"
+Bleeding_South5optb:0 "I wish I was in the Land Of Cotton"
 
 Bleeding_South6title:0 "Issues In The United Commonwealth"
 Bleeding_South6desc:0 "The United Commonwealth administration has just sent an urgent report based on a supposed Southern rebellion. While only received minutes ago our suspicions are being confirmed by the minute. The UC will have some explaining to do but for the time being we must aid them in their war against the Free States Alliance.\n\n It is a true shame that British boys will be sent to die in a foreign land." 
-Bleeding_South6opta:0 "Muster An Expeditionary Force"
+Bleeding_South6opta:0 "Muster an expeditionary force"
 
 Bleeding_South7title:0 "The South Is Tamed"
 Bleeding_South7desc:0 "Once again our troops march across the southern lands in the name of freedom. Once again so many die to the hands of brothers. And once again we are divided. A recurring curse placed onto us by God it seems. One that will never end and is doomed to repeat itself until one brother can finally create a wound so damaging that healing will take a millennium.\n\nAnd even then I doubt we will be united. " 
-Bleeding_South7opta:0 "Lets Hope That Never Happens Again"
+Bleeding_South7opta:0 "Lets hope that never happens again"
 
 Bleeding_South8title:0 "The Sins Of Our Fathers"
 Bleeding_South8desc:0 "We have failed to contain the Southern threat and as a result we are forced to reconcile with these backwards barbarians, traitors, and infidels. As it stands the scoreboard reads "One to One" but there is always time for another game.\n\nAnother victory." 
-Bleeding_South8opta:0 "I Wish I Was Dixie"
+Bleeding_South8opta:0 "I wish I was Dixie"
 
