--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -161,6 +161,7 @@ PB_Bonus_Brigade_Cost_5:0 "Bonus Brigade Stipends"
 PB_Bonus_Brigade_Cost_6:0 "Bonus Brigade Stipends"
 
 PB_AME_Founder_Of_NATO:0 "N.A.T.O"
+PB_AME_Fleet_Expansion:0 "Fleet Expansion"
 
 ##########################
 # DYNAMIC MODIFIERS
@@ -873,6 +874,7 @@ PB_AME_Kelloggs_London_Proposal_flag:0 "Has completed focus §Y$PB_AME_Kelloggs_
 PB_AME_Debt_has_Its_Own_Benefit_flag_tt:0 "Current days are: [?PB_AME_Debt_has_Its_Own_Benefit:days|Y0]"
 PB_AME_Debt_has_Its_Own_Benefit_flag:0 "Has completed focus §Y$PB_AME_Debt_has_Its_Own_Benefit$§!"
 PB_AME_North_American_Economic_Community_tt:0 "Any country who has a core in §YNorth America§! and is at peace with the United Commonwealth:"
+PB_AME_Expand_The_Fleet_tt:0 "Immediately gain:\n  2x Carriers £GFX_ship_carrier_icon_small\n\n  2x Cruisers £GFX_ship_battle_cruiser_icon_small\n"
 
 ##########################
 # PUPPET AUTONOMY
